# folio

./: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  tailwind.config.js  wrangler.toml
public/: tailwind.css
src/: global.css  input.css  lib.rs  markup.rs  theming.js  toasts.js
src/markup/: home.rs  projects.rs
src/markup/projects/: card.rs  mod.rs
